[project]
name = "speechbrain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
# requires-python = ">=3.12,<3.13"
requires-python = ">=3.11,<3.12"
dependencies = [
    "black==19.10b0",
    "click==8.0.4",
    "flake8==3.7.9",
    "huggingface-hub>=0.7.0",
    "hyperpyyaml>=0.0.1",
    "joblib>=0.14.1",
    "numpy==1.26",
    "packaging>=25.0",
    "pre-commit>=2.3.0",
    "pycodestyle==2.5.0",
    "pytest==5.4.1",
    "scipy==1.16",
    "sentencepiece>=0.1.91",
    "soundfile>=0.13.1 ; sys_platform == 'win32'",
    "torch>=1.9.0",
    "torchaudio>=0.9.0",
    "tqdm>=4.42.0",
    "yamllint==1.23.0",
    "praatio==6.2.0",
    "scikit-learn==1.7.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
